<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pixel Pets</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="greeting">Pixel Pets! ^_^</string>
    <string name="description">The interactive egg-petting simulator</string>
    <string name="button_start">Start</string>
    
    
    <string name="title_activity_garden">Pet Garden</string>
    <string name="pet_name">\?\?\?</string>
    <string name="article">the</string>
    <string name="pet_species">Mysterious Egg</string>
    <string name="pet_level"></string>
    <string name="pet_description">The egg hatched!!</string>
    <string name="adventure_button">Adventure</string>
    <string name="train_button">Train</string>
    <string name="manage_button">Manage Pets</string>
    <string name="inventory_button">Inventory</string>
    <string name="connect_button">Connect</string>
    <string name="petcyclopedia_button">Codex</string>
    <string name="prev_pet_button">&lt;</string>
    <string name="next_pet_button">&gt;</string>
    <string name="name_text">A Puglett has hatched!\nName your new Puglett?</string>
    
    
    <string name="title_activity_view_stats">View Stats</string>
    <string name="date_hatched_title">Date Hatched: </string>
    <string name="date_hatched">6/24/2003</string>
    <string name="battle_type_title">Type(s): </string>
    <string name="primary_type">Wild</string>
    <string name="comma">,</string>
    <string name="secondary_type"></string>
    <string name="pet_exp_title">Current EXP: </string>
    <string name="pet_exp">0 EXP</string>
    <string name="pet_exp_tolevel_title">To Next Level:</string>
    <string name="pet_exp_tolevel">30 EXP</string>
    <string name="pet_hunger_title">Hunger:</string>
    <string name="pet_hunger">Full Up</string>
    <string name="pet_hp_title">HP: </string>
    <string name="pet_hp">10/10</string>
    <string name="pet_attack_title">Attack: </string>
    <string name="pet_attack">5</string>
    <string name="pet_speed_title">Speed: </string>
    <string name="pet_speed">4</string>
    <string name="pet_defense_title">Defense: </string>
    <string name="pet_defense">3</string>
    <string name="special_ability">Pig Berserk</string>
    <string name="pet_move0">Mud Bath</string>
    <string name="pet_move1">Headbutt</string>
    <string name="pet_move2">Mud Splash</string>
    <string name="pet_move3">--------</string>
    <string name="pet_move4">--------</string>
    <string name="pet_ambition">• Ambition: 0</string>
    <string name="pet_empathy">• Empathy: 0</string>
    <string name="pet_insight">• Insight: 0</string>
    <string name="pet_diligence">• Diligence: 0</string>
    <string name="pet_charm">• Charm: 0</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="all_pets">Daycare</string>
    
    
    <string name="title_activity_adventure">Adventure!</string>
    <string name="pet_adventure_description">Ready and rearing for adventure!</string>
    <string name="adventure_description">Dooble stumbles across a shiny treasure chest. He hears a voice say \"Do not be consumed by greed!\"</string>
    <string name="adventure_button1">Open it</string>
    <string name="adventure_button2">Wait around</string>
    <string name="adventure_button3">Run away</string>
    <string name="adventure_button4">Search area</string>
    <string name="back_to_map">Back to Map</string>
    <string name="back_to_garden">Back to Garden</string>
    
    
    <string name="title_activity_training">Battle!</string>
    <string name="pet_battle_description">Ready and rearing for battle!</string>
    <string name="pet_hp_text">12/12</string>
    <string name="foe_name">Chloropillar</string>
    <string name="foe_description">No mercy!!</string>
    <string name="foe_hp_text">100%</string>
    <string name="battle_description">•A wild Pidgey appears!\n•Go! Dooble!</string>
    <string name="battle_button1">Fight</string>
    <string name="battle_button2">Use Item</string>
    <string name="battle_button3">Switch</string>
    <string name="battle_button4">Flee</string>
    <string name="back_to_battle">Back to Battle</string>
    
    
    <string name="title_activity_manage">Manage Pets</string>
    <string name="title_activity_pick_battle_pet">Switch in Pet</string>
    <string name="back_button">Back</string>
    <string name="new_attack_text">Which attack do you wish to\nforget to learn Mud Bath?</string>
    
    
    <string name="title_activity_inventory">Inventory</string>
    <string name="battle_pocket_title">Battle Items</string>
    <string name="medicine_pocket_title">Medicines</string>
    <string name="food_pocket_title">Pet Food</string>
    <string name="treasure_pocket_title">Treasure</string>
    <string name="collectable_pocket_title">Collectables</string>
    <string name="item_name">Dubloon (99)</string>
    <string name="item_description">A shiny gold dubloon.</string>
    <string name="no_items">You currently have no items…\nGet some by adventuring!</string>
    <string name="no_battle_items">You currently have no battle items…</string>
    <string name="no_daycare_pets">There are currently no pets in the daycare…</string>
    <string name="title_activity_use_item">Use Item: Red Potion</string>
    <string name="back_to_inventory">Back to Inventory</string>
    
    
    <string name="title_activity_codex">Pet Codex</string>
    
    
    <string name="title_activity_world_map">World Map</string>
    <string name="area_index0">Lost Woods</string>
    <string name="area_index1">Poison Lake</string>
    <string name="area_index2">Cave Mountain</string>
    <string name="area_index3">Breezy Plains</string>
    
    
    <string name="title_activity_daycare">Daycare</string>
    <string name="title_activity_daycare_view_stats">View Stats</string>
    <string name="back_to_daycare">Back to Daycare</string>
    <string name="title_activity_swap_party_egg">Switch Which Pet?</string>
    <string name="title_activity_learn_new_move">Learn New Attack</string>
    <string name="forget_new_move">Don\'t Learn Attack</string>
</resources>
