<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GardenActivity">
	<RelativeLayout 
	    android:id="@+id/garden_activity_view"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/pet_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:clickable="true"
        android:onClick="NameYourPet"
        android:text="@string/pet_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/article"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/pet_name"
        android:gravity="bottom"
        android:text="@string/article" />

    <TextView
        android:id="@+id/pet_species"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/article"
        android:gravity="bottom"
        android:text="@string/pet_species" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="19dp"
        android:layout_toRightOf="@id/pet_species">
    	<TextView
	        android:id="@+id/pet_level"
        	android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:layout_marginLeft="10dp"
        	android:layout_alignParentRight="true"
        	android:layout_alignParentBottom="true"
        	android:gravity="bottom"
        	android:text="@string/pet_level" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/garden_frame_area"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android:layout_below="@id/pet_name"
        android1:layout_marginTop="14dp" >
    	<ImageView
	        android:id="@+id/pet_area"
        	android:layout_width="128dp"
        	android:layout_height="128dp"
        	android:layout_centerHorizontal="true"
        	android:adjustViewBounds="false"
        	android:contentDescription="@string/pet_description"
        	android:onClick="TapPet"
        	android:scaleType="matrix"
        	android:src="@drawable/egg_sheet" />
    </RelativeLayout>

    <TextView
        android:id="@+id/pet_description"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/garden_frame_area"
        android:textAlignment="center"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/pet_description" />

    <LinearLayout
        android:id="@+id/button_row1"
        android:weightSum="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/pet_description"
        android:layout_below="@id/pet_description" 
        android:layout_marginTop="15dp" >

        <Button 
            android:id="@+id/adventure_button"
            android:layout_weight="0.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:onClick="Adventure" 
            android:text="@string/adventure_button"/>
        <Button 
            android:id="@+id/connect_button"
            android:layout_weight="0.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:onClick="Connect"  
            android:text="@string/connect_button"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/button_row2"
        android:weightSum="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_row1"
        android:layout_below="@id/button_row1"
        android:layout_marginTop="0dp" >
        <Button 
            android:id="@+id/manage_button"
            android:layout_weight="0.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:onClick="ManagePets"  
            android:text="@string/manage_button"/>
        <Button 
            android:id="@+id/inventory_button"
            android:layout_weight="0.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:onClick="Inventory" 
            android:text="@string/inventory_button"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/button_row3"
        android:weightSum="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_row2"
        android:layout_below="@id/button_row2"
        android:layout_marginTop="0dp" >
        <Button 
            android:id="@+id/train_button"
            android:layout_weight="0.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:onClick="Train"  
            android:text="@string/train_button"/>
        <Button 
            android:id="@+id/petcyclopedia_button"
            android:layout_weight="0.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:onClick="Petcyclopedia" 
            android:text="@string/petcyclopedia_button"/>
    </LinearLayout>

    <Button
        android1:id="@+id/next_pet_button"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBottom="@+id/garden_frame_area"
        android1:layout_alignRight="@+id/pet_description"
        android1:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:onClick="NextPet"
        android:textColor="@color/transgrey"
        android1:paddingBottom="4dp"
        android1:paddingTop="0dp"
        android1:text="@string/next_pet_button"
        android1:textSize="32sp" />

    <Button
        android1:id="@+id/prev_pet_button"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBottom="@+id/garden_frame_area"
        android1:layout_alignLeft="@+id/pet_description"
        android1:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:onClick="PrevPet"
        android:textColor="@color/transgrey"
        android1:paddingBottom="4dp"
        android1:paddingTop="0dp"
        android1:text="@string/prev_pet_button"
        android1:textSize="32sp" />

</RelativeLayout>
</ScrollView>